--- a/ant/VM/Makefile.inc
+++ b/ant/VM/Makefile.inc
@@ -1,21 +1,29 @@
 
-VM_MOD         = VM/Opaque VM/Types VM/VMPrivate VM/Machine
+VM_MOD         = VM/Opaque VM/Types VM/Private/VMPrivate VM/Machine
 VM_ML          = $(addsuffix .ml,$(VM_MOD))
 VM_MLI         = $(addsuffix .mli,$(VM_MOD))
 VM_CMO         = $(addsuffix .$(CMO),$(VM_MOD))
-VM_PRIVATE_MOD = VM/Lexer VM/Parser VM/Scope VM/Compile VM/Evaluate VM/Primitives
+VM_PRIVATE_MOD = VM/Private/Lexer VM/Private/Parser VM/Private/Scope VM/Private/Compile VM/Private/Evaluate VM/Private/Primitives
 VM_PRIVATE_ML  = $(addsuffix .ml,$(VM_PRIVATE_MOD))
 VM_PRIVATE_MLI = $(addsuffix .mli,$(VM_PRIVATE_MOD))
 VM_PRIVATE_CMO = $(addsuffix .$(CMO),$(VM_PRIVATE_MOD))
 
-VM/VMPrivate.$(CMO): $(VM_PRIVATE_CMO)
-	$(MLC) -pack $(DEBUGFLAGS) -o $@ $(CUSTOM) $^
+ifdef NATIVE
+  MLFLAGS_VM_         = -I VM/Private #-for-pack VM
+  MLFLAGS_VM_Private_ = -I VM #-for-pack VM.VMPrivate
+else
+  MLFLAGS_VM_         = -I VM/Private
+  MLFLAGS_VM_Private_ = -I VM
+endif
 
-VM/VMPrivate.cmi VM/VMPrivate.o: VM/VMPrivate.$(CMO)
+VM/Private/VMPrivate.$(CMO): $(VM_PRIVATE_CMO)
+	$(MLC) -pack $(DEBUGFLAGS) -I VM/Private -for-pack VM -o $@ $(CUSTOM) $^
+
+VM/Private/VMPrivate.cmi VM/Private/VMPrivate.o: VM/Private/VMPrivate.$(CMO)
 	touch $@
 
 VM/VM.$(CMO): $(VM_CMO)
-	$(MLC) -pack $(DEBUGFLAGS) -o $@ $(CUSTOM) $^
+	$(MLC) -pack $(DEBUGFLAGS) -I VM -o $@ $(CUSTOM) $^
 
 VM/VM.cmi VM/VM.o: VM/VM.$(CMO)
 	touch $@
@@ -34,9 +42,10 @@ lib/VM.$(CMO) lib/VM.cmi: $(VM_INSTALL)
 -include VM/Makefile.depend
 
 VM/depend:
-	touch VM/VMPrivate.ml VM/VMPrivate.mli
-	$(ML_DEPEND) $(filter-out VM/VMPrivate.%,$(VM_MLI) $(VM_PRIVATE_MLI) $(VM_ML) $(VM_PRIVATE_ML)) | sed -e 's!Unicode.cmx!Unicode.$(CMA)!' -e 's!Runtime.cmx!Runtime.$(CMA)!' >VM/Makefile.depend
-	rm VM/VMPrivate.ml VM/VMPrivate.mli
+	$(ML_DEPEND) $(VM_PRIVATE_MLI) $(VM_PRIVATE_ML) | sed -e 's!Unicode.cmx!Unicode.$(CMA)!' -e 's!Runtime.cmx!Runtime.$(CMA)!' >VM/Private/Makefile.depend
+	touch VM/Private/VMPrivate.ml VM/Private/VMPrivate.mli
+	$(ML_DEPEND) $(filter-out VM/Private/VMPrivate.%,$(VM_MLI) $(VM_ML)) | sed -e 's!Unicode.cmx!Unicode.$(CMA)!' -e 's!Runtime.cmx!Runtime.$(CMA)!' >VM/Makefile.depend
+	rm VM/Private/VMPrivate.ml VM/Private/VMPrivate.mli
 
 VM/ali: Tools/Tools.$(CMA) lib/CamlImages.$(CMA) lib/Unicode.$(CMA) lib/Runtime.$(CMA) $(VM_CMO) VM/Ali.$(CMO)
 	$(LINK_ML)
