--- a/ant/Images/Makefile.inc
+++ b/ant/Images/Makefile.inc
@@ -1,22 +1,15 @@
 
-CAMLIMAGES_CMO  = camlimages.$(CMO) region.$(CMO) tmpfile.$(CMO) bitmap.$(CMO) blend.$(CMO) genimage.$(CMO) \
-                  cmyk32.$(CMO) mstring.$(CMO) color.$(CMO) rgba32.$(CMO) rgb24.$(CMO) index16.$(CMO) \
-                  index8.$(CMO) images.$(CMO) ftlow.$(CMO) freetype.$(CMO) jis_table.$(CMO) \
-                  jis_unicode.$(CMO) fttext.$(CMO) geometry.$(CMO) gif.$(CMO) \
-                  bmp.$(CMO) jpeg.$(CMO) png.$(CMO) ppm.$(CMO) ps.$(CMO) reduce.$(CMO) tiff.$(CMO) \
-                  xpm.$(CMO) xvthumb.$(CMO)
-CAMLIMAGES_O    = tiffread.o tiffwrite.o xpmread.o xpmwrite.o ftintf.o gifread.o gifwrite.o jpegread.o \
-                  jpegwrite.o pngread.o pngwrite.o
-CAMLIMAGES_LIBS = -lgif -ljpeg -ltiff -lfreetype -lpng -lz -lXpm
+CAMLIMAGES_CLIBS  = -lgif -ljpeg -ltiff -lfreetype -lpng -lz -lXpm
+CAMLIMAGES_MLLIBS = $(addprefix camlimages/, ci_core.$(CMA) ci_freetype.$(CMA) ci_gif.$(CMA) ci_jpeg.$(CMA) \
+                    ci_tiff.$(CMA) ci_bmp.$(CMA) ci_ppm.$(CMA) ci_png.$(CMA) ci_xvthumb.$(CMA) ci_xpm.$(CMA) ci_ps.$(CMA))
+MLFLAGS_Images_ = -I +camlimages
 
-Images/CamlImages.$(CMO):
-	$(MLC) -pack -o $@ $(CUSTOM) $(addprefix camlimages/, $(CAMLIMAGES_CMO))
+Images/CamlImages.$(CMO): Images/CamlImages.ml
 
 Images/CamlImages.cmi: Images/CamlImages.$(CMO)
 	touch $@
 
-Images/CamlImages.$(CMA): Images/CamlImages.$(CMO) \
-                                      $(addprefix $(CAML_LIB_DIR)/camlimages/, $(CAMLIMAGES_O))
+Images/CamlImages.$(CMA): Images/CamlImages.$(CMO)
 	$(MLC) -a -o $@ $(CUSTOM) $^
 
 Images/CamlImages.a: Images/CamlImages.$(CMA)
