--- a/ant/VM/Makefile.inc
+++ b/ant/VM/Makefile.inc
@@ -3,7 +3,8 @@ VM_MOD         = VM/Opaque VM/Types VM/Private/VMPrivate VM/Machine
 VM_ML          = $(addsuffix .ml,$(VM_MOD))
 VM_MLI         = $(addsuffix .mli,$(VM_MOD))
 VM_CMO         = $(addsuffix .$(CMO),$(VM_MOD))
-VM_PRIVATE_MOD = VM/Private/Lexer VM/Private/Parser VM/Private/Scope VM/Private/Compile VM/Private/Evaluate VM/Private/Primitives
+VM_PRIVATE_MOD = VM/Private/Lexer VM/Private/Parser VM/Private/Scope VM/Private/Compile VM/Private/CStack VM/Private/Evaluate \
+                 VM/Private/Primitives
 VM_PRIVATE_ML  = $(addsuffix .ml,$(VM_PRIVATE_MOD))
 VM_PRIVATE_MLI = $(addsuffix .mli,$(VM_PRIVATE_MOD))
 VM_PRIVATE_CMO = $(addsuffix .$(CMO),$(VM_PRIVATE_MOD))
@@ -23,7 +24,7 @@ VM/Private/VMPrivate.cmi VM/Private/VMPrivate.o: VM/Private/VMPrivate.$(CMO)
 	touch $@
 
 VM/VM.$(CMO): $(VM_CMO)
-	$(MLC) -pack $(DEBUGFLAGS) -I VM -o $@ $(CUSTOM) $^
+	$(MLC) -pack $(DEBUGFLAGS) -I VM -I VM/Private -o $@ $(CUSTOM) $^
 
 VM/VM.cmi VM/VM.o: VM/VM.$(CMO)
 	touch $@
@@ -40,12 +41,15 @@ lib/VM.$(CMO) lib/VM.cmi: $(VM_INSTALL)
 	cp -f $^ lib
 
 -include VM/Makefile.depend
+-include VM/Private/Makefile.depend
 
 VM/depend:
-	$(ML_DEPEND) $(VM_PRIVATE_MLI) $(VM_PRIVATE_ML) | sed -e 's!Unicode.cmx!Unicode.$(CMA)!' -e 's!Runtime.cmx!Runtime.$(CMA)!' >VM/Private/Makefile.depend
 	touch VM/Private/VMPrivate.ml VM/Private/VMPrivate.mli
-	$(ML_DEPEND) $(filter-out VM/Private/VMPrivate.%,$(VM_MLI) $(VM_ML)) | sed -e 's!Unicode.cmx!Unicode.$(CMA)!' -e 's!Runtime.cmx!Runtime.$(CMA)!' >VM/Makefile.depend
+	$(ML_DEPEND) -I VM/Private $(filter-out VM/Private/VMPrivate.%,$(VM_MLI) $(VM_ML)) | sed -e 's!Unicode.cmx!Unicode.$(CMA)!' -e 's!Runtime.cmx!Runtime.$(CMA)!' >VM/Makefile.depend
 	rm VM/Private/VMPrivate.ml VM/Private/VMPrivate.mli
+
+VM/Private/depend:
+	$(ML_DEPEND) $(VM_PRIVATE_MLI) $(VM_PRIVATE_ML) | sed -e 's!Unicode.cmx!Unicode.$(CMA)!' -e 's!Runtime.cmx!Runtime.$(CMA)!' >VM/Private/Makefile.depend
 
 VM/ali: Tools/Tools.$(CMA) lib/CamlImages.$(CMA) lib/Unicode.$(CMA) lib/Runtime.$(CMA) $(VM_CMO) VM/Ali.$(CMO)
 	$(LINK_ML)
