--- a/ant/Runtime/Makefile.inc
+++ b/ant/Runtime/Makefile.inc
@@ -4,7 +4,7 @@ RUNTIME_MOD = Runtime/UCStream Runtime/Bitmap Runtime/KPathSea Runtime/FreeType 
               Runtime/Type1 Runtime/OpenType Runtime/Logging Runtime/Dim Runtime/Bezier Runtime/Graphic \
               Runtime/Substitute Runtime/GlyphMetric Runtime/FontMetric Runtime/Encodings Runtime/Hyphenation Runtime/JustHyph \
               Runtime/GlyphBitmap Runtime/FontPK Runtime/FontTFM Runtime/FontFT Runtime/FontVirtual \
-              Runtime/LoadFont \
+              Runtime/LoadFont Runtime/LoadImage \
               Runtime/GenerateDVI Runtime/PDF Runtime/GeneratePDF Runtime/GeneratePostScript Runtime/GenerateSVG
 RUNTIME_ML  = $(addsuffix .ml,$(RUNTIME_MOD))
 RUNTIME_MLI = $(addsuffix .mli,$(RUNTIME_MOD))
