--- a/ant/Runtime/Makefile.inc
+++ b/ant/Runtime/Makefile.inc
@@ -1,11 +1,11 @@
 
-RUNTIME_MOD = Runtime/UCStream Runtime/Bitmap Runtime/KPathSea Runtime/FreeType \
+RUNTIME_MOD = Runtime/UCStream Runtime/Bitmap Runtime/KPathSea Runtime/FreeType Runtime/PDF Runtime/LoadImage \
               Runtime/DynamicTrie Runtime/DynUCTrie Runtime/Trie Runtime/PTable Runtime/SymbolSet \
               Runtime/Type1 Runtime/OpenType Runtime/Logging Runtime/Dim Runtime/Bezier Runtime/Graphic \
               Runtime/Substitute Runtime/GlyphMetric Runtime/FontMetric Runtime/Encodings Runtime/Hyphenation Runtime/JustHyph \
               Runtime/GlyphBitmap Runtime/FontPK Runtime/FontTFM Runtime/FontFT Runtime/FontVirtual \
-              Runtime/LoadFont Runtime/LoadImage \
-              Runtime/GenerateDVI Runtime/PDF Runtime/GeneratePDF Runtime/GeneratePostScript Runtime/GenerateSVG
+              Runtime/LoadFont \
+              Runtime/GenerateDVI Runtime/GeneratePDF Runtime/GeneratePostScript Runtime/GenerateSVG
 RUNTIME_ML  = $(addsuffix .ml,$(RUNTIME_MOD))
 RUNTIME_MLI = $(addsuffix .mli,$(RUNTIME_MOD))
 RUNTIME_CMO = $(addsuffix .$(CMO),$(RUNTIME_MOD))
