--- a/ant/Tools/Makefile
+++ b/ant/Tools/Makefile
@@ -29,14 +29,12 @@ endif
 
 ifdef NATIVE_CAMLP4
   CAMLP4         = camlp4r      # preprocessor for camlp4 syntax extensions
-  MLPP           = ./camlp4opt  # preprocessor for normal ml files
+  MLPP           = ../PreProc/camlp4opt  # preprocessor for normal ml files
   MLPP_PA        =
-  CAMLP4_TARGETS = camlp4opt    # additional targets to make
 else
   CAMLP4         = camlp4r      # preprocessor for camlp4 syntax extensions
   MLPP           = camlp4r      # preprocessor for normal ml files
-  MLPP_PA        = ./pa_Num.cmo ./pa_extensions.cmo
-  CAMLP4_TARGETS = pa_Num.cmo pa_extensions.cmo      # additional targets to make
+  MLPP_PA        = ../PreProc/pa_Num.cmo ../PreProc/pa_extensions.cmo
 endif
 
 ifndef MATH_LIB
@@ -78,27 +76,13 @@ TOOLS_CMO = $(addsuffix .$(CMO),$(TOOLS))
 TOOLS_C   = zlib-stubs.c
 TOOLS_O   = $(PWD)/zlib-stubs.o  # fix bug with ocamlc -a
 
-all: XNum.ml $(CAMLP4_TARGETS) $(TOOLS_CMI) Tools.$(CMA)
+all: XNum.ml $(TOOLS_CMI) Tools.$(CMA)
 
 $(PWD)/zlib-stubs.o: zlib-stubs.c
 	$(MLC) -o $@ $^
 
 Tools.$(CMA): $(TOOLS_O) $(TOOLS_CMO)
 	$(MLC) -a -o $@ $(CUSTOM) $^
-
-pa_Num.cmo: pa_Num.ml
-	$(MLC_BIN) -pp "$(CAMLP4) pa_extend.cmo q_MLast.cmo" -I Tools -I $(MLCPPLIB) -c $<
-pa_Num.cmx: pa_Num.ml
-	$(MLC_NAT) -pp "$(CAMLP4) pa_extend.cmo q_MLast.cmo" -I Tools -I $(MLCPPLIB) -c $<
-
-pa_extensions.cmo: pa_extensions.ml
-	$(MLC_BIN) -pp "$(CAMLP4) pa_extend.cmo q_MLast.cmo" -I Tools -I $(MLCPPLIB) -c $<
-pa_extensions.cmx: pa_extensions.ml
-	$(MLC_NAT) -pp "$(CAMLP4) pa_extend.cmo q_MLast.cmo" -I Tools -I $(MLCPPLIB) -c $<
-
-camlp4opt: pa_Num.cmx pa_extensions.cmx
-	ocamlopt -linkall -I $(MLCPPLIB) -o camlp4opt odyl.cmxa camlp4.cmxa pa_r.cmx pa_rp.cmx pr_dump.cmx \
-          pa_Num.cmx pa_extensions.cmx odyl.cmx
 
 XNum.ml:
 	echo "include Num$(MATH_LIB);" >$@
@@ -120,7 +104,7 @@ XNum.$(CMO): XNum.ml XNum.cmi Num$(MATH_LIB).cmi Num$(MATH_LIB).ml Num$(MATH_LIB
 
 -include Makefile.depend
 
-depend: $(CAMLP4_TARGETS)
+depend:
 	$(ML_DEPEND) $(TOOLS_MLI) $(TOOLS_ML) >Makefile.depend
 
 clean:
